[gd_scene load_steps=6 format=3 uid="uid://de0ms4ysov6dn"]

[ext_resource type="Script" path="res://Scripts/Board.gd" id="1_py6m7"]
[ext_resource type="Texture2D" uid="uid://4dj2mdaskq6e" path="res://Textures/X.png" id="2_n1js0"]
[ext_resource type="Texture2D" uid="uid://dbjvb4sbyp7sj" path="res://Textures/Board.png" id="2_nl6r3"]
[ext_resource type="Texture2D" uid="uid://bax7lj17x02p5" path="res://Textures/O.png" id="3_5n6ms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsql8"]
size = Vector2(194.5, 192.5)

[node name="Board" type="Node2D"]
script = ExtResource("1_py6m7")
X = ExtResource("2_n1js0")
O = ExtResource("3_5n6ms")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(297, 300)
scale = Vector2(0.582031, 0.582031)
texture = ExtResource("2_nl6r3")

[node name="Area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
position = Vector2(96.75, 99.5)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area1"]
position = Vector2(96.5, 99)
scale = Vector2(2.98438, 2.9375)

[node name="Area2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
position = Vector2(296, 99)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area2"]
position = Vector2(295, 99.5)
scale = Vector2(2.96875, 2.95313)

[node name="Area3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area3"]
position = Vector2(496, 99)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area3"]
position = Vector2(497, 99)
scale = Vector2(3, 2.9375)

[node name="Area4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area4"]
position = Vector2(97, 299)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area4"]
position = Vector2(99, 298)
scale = Vector2(2.96875, 2.90625)

[node name="Area5" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area5"]
position = Vector2(296, 299)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area5"]
position = Vector2(297, 299)
scale = Vector2(2.96875, 2.90625)

[node name="Area6" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area6"]
position = Vector2(496, 296.75)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area6"]
position = Vector2(496, 298.5)
scale = Vector2(2.96875, 2.85937)

[node name="Area7" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area7"]
position = Vector2(98, 497)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area7"]
position = Vector2(98, 495)
scale = Vector2(3, 2.92188)

[node name="Area8" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area8"]
position = Vector2(297, 497)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area8"]
position = Vector2(296.5, 499.5)
scale = Vector2(2.89063, 2.98437)

[node name="Area9" type="Area2D" parent="."]
position = Vector2(2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area9"]
position = Vector2(496, 497)
shape = SubResource("RectangleShape2D_wsql8")

[node name="Sprite" type="Sprite2D" parent="Area9"]
position = Vector2(493.5, 499.5)
scale = Vector2(2.89062, 2.89063)

[node name="Username" type="TextEdit" parent="."]
offset_left = 272.0
offset_top = 615.0
offset_right = 599.0
offset_bottom = 676.0
editable = false

[node name="Opponentname" type="TextEdit" parent="."]
offset_left = 270.0
offset_top = 711.0
offset_right = 595.0
offset_bottom = 772.0
editable = false

[node name="TextEdit3" type="TextEdit" parent="."]
offset_left = 9.0
offset_top = 627.0
offset_right = 240.0
offset_bottom = 668.0
text = "Your nickname:"
editable = false

[node name="TextEdit4" type="TextEdit" parent="."]
offset_left = 11.0
offset_top = 719.0
offset_right = 242.0
offset_bottom = 760.0
text = "Your opponent:"
editable = false

[node name="Winner" type="TextEdit" parent="."]
visible = false
offset_top = 806.0
offset_right = 598.0
offset_bottom = 890.0
editable = false

[node name="GoBack" type="Button" parent="."]
visible = false
offset_left = 170.0
offset_top = 913.0
offset_right = 436.0
offset_bottom = 988.0
disabled = true
text = "Go back to menu"

[connection signal="input_event" from="Area1" to="." method="_on_area_1_input_event"]
[connection signal="input_event" from="Area2" to="." method="_on_area_2_input_event"]
[connection signal="input_event" from="Area3" to="." method="_on_area_3_input_event"]
[connection signal="input_event" from="Area4" to="." method="_on_area_4_input_event"]
[connection signal="input_event" from="Area5" to="." method="_on_area_5_input_event"]
[connection signal="input_event" from="Area6" to="." method="_on_area_6_input_event"]
[connection signal="input_event" from="Area7" to="." method="_on_area_7_input_event"]
[connection signal="input_event" from="Area8" to="." method="_on_area_8_input_event"]
[connection signal="input_event" from="Area9" to="." method="_on_area_9_input_event"]
[connection signal="pressed" from="GoBack" to="." method="_on_button_pressed"]
